# otus_tsk2

./: .gitignore  .gitmodules  AdapterCmd.h  AdapterMovingObject.h  CMakeLists.txt  CMakeLists_tst.txt  CMakePresets.json  CommandInterpreter.h  CommandQueue.h  DependencyResolver.h  EndPoints.h  IResolverContainer.h  InitCommand.h  InterpretCommand.h  IoC_scope_test.h  IoCcontainer.h  RegisterCommand.h  RulesCommands.h  ThreadCmd.h  angle.h  angle_test.h  command.h  command_queue.h  command_test.h  exception_library.h  exception_library_test.h  exceptions.h  expectations_test.h  game.h  main.cpp  main.gcno  mo_tests.h  move.cpp  move.h  movingobject.h  ro_tests.h  rotate.h  rotatingobject.h  rotation.cpp  rotation.h  (+11 more)
.github/workflows/: cmake-single-platform.yml
EPclnt/: CMakeLists.txt  endpoint.h  main.cpp
EPsrv/: CMakeLists.txt  commands.h  endpoint.h  jwt_library.h  main.cpp
TESTS/: Endpoint_test.h  IoC_Register_tests.h  IoC_adapter_test.h  IoC_scope_test.h  JWTVerify_test.h  States_test.h  SyncThreadCmd_test.h  ThreadCmd_test.h  command_test.h  exception_test.h
adapters/: MovingObjectAdapter.h  RotatingObjectAdapter.h
agent/: CMakeLists.txt  endpoint.h  main.cpp
autorization/: AutorizationCommand.h  CMakeLists.txt  CommandQueue.h  DependencyResolver.h  IResolverContainer.h  InterpretCommand.h  IoCcontainer.h  RegisterCommand.h  SRV_TESTS.h  ThreadCmd.h  command.h  endpoint.h  exceptions.h  jwt_library.h  main.cpp
interfaces_obj/: movingobject.h  rotatingobject.h
older_task/: angle.h  angle_test.h  command_queue.h  exception_library_test.h  mo_tests.h  move.h  ro_tests.h  rotate.h  task4.h  task4_test.h  tst_main.cpp  vector2.h  vector_test.h
parser/: CMakeLists.txt  Parser.h  main.cpp
